[package]
name = "rustworker"
version = "0.1.0"
authors = ["iuzziel <iuzziel.abrudavah@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
chrono = { version = "0.4.10", features = ["serde"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]